corrected table and aligned form

--- a/HW 5/css/style.css
+++ b/HW 5/css/style.css
@@ -11,14 +11,20 @@
 body{
   font-family: "helvetica_neueregular";
 }
-.content{
-  margin: 0 auto;
-  padding-top: 36px;
+.wrapper{
+  position: relative;
   width: 1215px;
   height: 1028px;
+  margin: 0 auto;
+  border: 1px solid white;
   background-image: url(../img/background.png);
   background-repeat: no-repeat;
 }
+/*.content{
+  padding-top: 36px;
+  width: 1215px;
+  height: 1028px;
+}*/
 .header{
   margin: 0 auto;
   width: 1215px;
@@ -62,10 +68,13 @@ span{
   text-decoration: underline;
 }
 .form{
-  margin: 0 auto;
-  margin-top: 10%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 560px;
   height: 610px;
+  margin-left: -230px;
+  margin-top: -305px;
   color: white;
 }
 .form_header{
