--- a/HW 5/table/css/style.css
+++ b/HW 5/table/css/style.css
@@ -1,14 +1,15 @@
 table{
   margin: auto;
-  border: 2px solid black;
-  border-collapse: collapse;
+  border: 5px solid black;
+  border-collapse: collapse;;
+  border-spacing: 3px;
 }
 td{
   width: 20px;
   height: 20px;
   margin: 20px;
   padding: 30px;
-  border: 2px solid black;
+  border: 5px solid black;
 }
 .yellow{
   background-color: yellow;
@@ -23,7 +24,25 @@ td{
 .grey{
   background-color: #2F4F4F;
 }
-.border{
+.stretch{
+  width: 80px;
+}
+.pull{
+  height: 80px;
+}
+.remove_border1{
   border-bottom: 0;
+  border-right: 0;
+}
+.remove_border2{
+  border-bottom: 0;
+  border-left: 0;
+}
+.remove_border3{
   border-top: 0;
+  border-right: 0;
+}
+.remove_border4{
+  border-top: 0;
+  border-left: 0;
 }
